<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_moveit_bridge</name>
  <version>0.0.0</version>
  <description>Bridge for MoveIt to Isaac Sim without Action Server</description>
  <maintainer email="Welly_Liou@adata.com">welly_liou</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <!-- moveit_py only needed for plan_and_publish and random_move_planner -->
  <!-- <depend>moveit_py</depend> -->
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
